--- a/system/templates/apps/parts/layout/app-header.hbs
+++ b/system/templates/apps/parts/layout/app-header.hbs
@@ -4,7 +4,7 @@
         <div class="fatex-desk__header">
             <div class="fatex-header">
                 <div class="fatex-header__name">
-                    <label class="fatex-header__label fatex__item__header__label">
+                    <label class="fatex-header__label">
                         {{#if isOwnedBy}}
                             {{ isOwnedBy }}
                         {{else}}
@@ -12,7 +12,7 @@
                         {{/if}}
                     </label>
 
-                    <div class="fatex-header__title fatex__item__header__title">
+                    <div class="fatex-header__title">
                         {{localize title}}
                     </div>
                 </div>
