--- a/system/templates/apps/template-actors.hbs
+++ b/system/templates/apps/template-actors.hbs
@@ -1,7 +1,7 @@
 {{#*inline "centerPartial"}}
-    <div class="fatex-eb-template-header-button fatex-eb-create-template fatex-header__center fatex__template__create">
-        <span class="fatex-header__label">{{localize "FAx.Settings.Templates.App.CreateNew"}}</span>
-        <i class="fas fa-plus fatex__item__header__title"></i>
+    <div class="fatex-eb-template-header-button fatex-eb-create-template fatex-template-action">
+        <span class="fatex-template-action__label">{{localize "FAx.Settings.Templates.App.CreateNew"}}</span>
+        <i class="fas fa-plus fatex-template-action__icon"></i>
     </div>
 {{/inline}}
 
@@ -11,36 +11,36 @@
     centerPartial="centerPartial"
 }}
 
-<div class="fatex__templates">
+<div class="fatex-templates">
     {{#each templateActors as |template templateIndex|}}
-        <div class="fatex__template">
+        <div class="fatex-template">
             <header class="fatex-headline">
                 <h3 class="fatex-headline__text">{{ template.name }}</h3>
             </header>
 
             <style>
-                .fatex__template__image--{{template._id}} {
+                .fatex-template__image--{{template._id}} {
                     background-image: url("{{template.img}}");
                 }
             </style>
 
-            <div class="fatex__template__image fatex__template__image--{{template._id}}" title="{{template.name}}"></div>
+            <div class="fatex-template__image fatex-template__image--{{template._id}}" title="{{template.name}}"></div>
 
-            <div class="fatex__template__information">
-                <span class="fatex__template__information__name">{{localize "FAx.Sheet.Aspects"}}</span>
-                <span class="fatex__template__information__value">{{template.aspects.length}}</span>
+            <div class="fatex-template__information-group">
+                <span class="fatex-template__information-name">{{localize "FAx.Sheet.Aspects"}}</span>
+                <span class="fatex-template__information-value">{{template.aspects.length}}</span>
 
-                <span class="fatex__template__information__name">{{localize "FAx.Sheet.StressTracks"}}</span>
-                <span class="fatex__template__information__value">{{template.stress.length}}</span>
+                <span class="fatex-template__information-name">{{localize "FAx.Sheet.StressTracks"}}</span>
+                <span class="fatex-template__information-value">{{template.stress.length}}</span>
 
-                <span class="fatex__template__information__name">{{localize "FAx.Sheet.Skills"}}</span>
-                <span class="fatex__template__information__value">{{template.skills.length}}</span>
+                <span class="fatex-template__information-name">{{localize "FAx.Sheet.Skills"}}</span>
+                <span class="fatex-template__information-value">{{template.skills.length}}</span>
 
-                <span class="fatex__template__information__name">{{localize "FAx.Sheet.Consequences"}}</span>
-                <span class="fatex__template__information__value">{{template.consequences.length}}</span>
+                <span class="fatex-template__information-name">{{localize "FAx.Sheet.Consequences"}}</span>
+                <span class="fatex-template__information-value">{{template.consequences.length}}</span>
             </div>
 
-            <div class="fatex__template__actions">
+            <div class="fatex-template__actions">
                 <span class="fatex-eb-configure-template fatex-button fatex-button--dark" data-template="{{template._id}}">
                     <i class="fa fa-cog"></i>
                     <span>{{localize "FAx.Global.Actions.Configure"}}</span>
@@ -61,8 +61,8 @@
             </div>
         </div>
     {{else}}
-        <div class="fatex__template__help">
-            <p>{{{localize "FAx.Settings.Templates.App.Help"}}}</p>
+        <div class="fatex-template__help fatex-u-full-width">
+            <p class="fatex-template__help-text">{{{localize "FAx.Settings.Templates.App.Help"}}}</p>
 
             {{> centerPartial }}
         </div>
