--- a/system/templates/item/parts/layout/item-header.hbs
+++ b/system/templates/item/parts/layout/item-header.hbs
@@ -11,7 +11,7 @@
                             {{localize FAx.Gloabl.BaseItem}}
                         {{/if}}
                     </label>
-                    <div class="fatex__header__title fatex__item__header__title">{{localize title}}</div>
+                    <div class="fatex-header__title">{{localize title}}</div>
                 </div>
 
                 <img class="fatex-header__logo" src="/systems/fatex/assets/logos/powered_by_fate.svg">
