Minor reorganisation of the files to reduce nested folders with only single documents inside. Removes some additional outdated styles.

--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -50,3 +50,14 @@ input[type="text"].fatex-text-input,
         padding-left: $component-padding / 2;
     }
 }
+
+.fatex__input--icon {
+    padding-left: $component-padding;
+}
+
+[contentEditable="true"]:empty:not(:focus):before {
+    content: attr(data-placeholder);
+    font-style: italic;
+    opacity: 0.3;
+    pointer-events: none;
+}
