Removes several layers of wrapper elements from the setup templates. Adds a new desk__content class for apps which includes padding. Updates the base vertical-tabs class.

--- a/src/styles/components/desk.scss
+++ b/src/styles/components/desk.scss
@@ -25,6 +25,10 @@
         overflow-y: auto;
         scrollbar-width: thin;
 
+        &--app {
+            padding: $component-padding;
+        }
+
         &--actor-sheet {
             display: grid;
             grid-template-columns: 4fr 1fr;
