--- a/system/templates/apps/parts/layout/app-header.hbs
+++ b/system/templates/apps/parts/layout/app-header.hbs
@@ -25,4 +25,4 @@
             </div>
         </div>
 
-        <div class="fatex-desk__content">
+        <div class="fatex-desk__content fatex-desk__content--app">
