--- a/src/styles/components/desk.scss
+++ b/src/styles/components/desk.scss
@@ -73,5 +73,11 @@
 
     &__tabs {
         grid-area: tabs;
+
+        &--vertical {
+            display: grid;
+            grid-template-columns: 1fr 3fr;
+            margin-bottom: -10px;
+        }
     }
 }
