Merges the vertical tab styles into the existing tab-content and tab-navigation documents. Updates all of the vertical tab styles.

--- a/src/styles/components/tabs/tab-content.scss
+++ b/src/styles/components/tabs/tab-content.scss
@@ -19,3 +19,8 @@
         display: flex;
     }
 }
+
+.fatex-vertical-tabs-content {
+    border-left: 1px solid rgba(0, 0, 0, 1);
+    margin-left: -1px;
+}
