Updates the fatex sheet config class to use the new naming scheme.

--- a/src/styles/components/sheet/configuration.scss
+++ b/src/styles/components/sheet/configuration.scss
@@ -1,6 +1,6 @@
 // TODO: Review these styles once the config.hbs file has been populated
 
-.fatex__sheet_config {
+.fatex-sheet-config {
     padding: $component-padding;
     display: none;
 
