Updates the setup styles. Adds a new button style for the setup page.

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -52,4 +52,10 @@
             transform: translateY(-1px);
         }
     }
+
+    &--setup {
+        display: flex;
+        width: fit-content;
+        margin: $component-padding auto 0 auto;
+    }
 }
