--- a/src/styles/components/apps/setup.scss
+++ b/src/styles/components/apps/setup.scss
@@ -2,8 +2,52 @@
     padding: $component-padding;
     min-width: 100%;
 
+    &__group {
+        width: 50%;
+        min-width: 180px;
+
+        &:only-child,
+        &--columns {
+            width: 100%;
+        }
+    }
+
+    &__group-label {
+        position: relative;
+        display: block;
+        margin-bottom: $component-padding;
+        font-size: 10px;
+        font-weight: bold;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+
+    &__groups {
+        display: flex;
+        gap: $component-padding;
+        padding: $component-padding;
+    }
+
     &__main {
         margin-top: $component-padding * 4;
+    }
+
+    &__option {
+        display: flex;
+        align-items: center;
+    }
+
+    &__options {
+        display: grid;
+        gap: $component-padding;
+
+        &--columns {
+            grid-template-columns: repeat(2, 1fr);
+
+            .fatex-sheet-setup__option {
+                page-break-inside: avoid;
+            }
+        }
     }
 
     &__section {
@@ -18,67 +62,25 @@
     gap: $component-padding / 2;
 }
 
-.fatex__sheet_setup__groups {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.fatex__sheet_setup__group {
-    padding: $component-padding;
-    width: 50%;
-    min-width: 180px;
-
-    &:only-child,
-    &.fatex__sheet_setup__group--columns {
-        width: 100%;
-    }
-}
-
-.fatex__sheet_setup__group__label {
-    position: relative;
-    display: block;
-    margin-bottom: $component-padding;
-    font-size: 10px;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-.fatex__sheet_setup__options--columns {
-    column-count: 2;
-
-    .fatex__sheet_setup__option {
-        page-break-inside: avoid;
-    }
-}
-
-.fatex__sheet_setup__option {
-    display: flex;
-}
-
-.fatex__sheet_setup__option + .fatex__sheet_setup__option {
-    margin-top: $component-padding;
-}
-
-.fatex__sheet_setup__option__box {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    border: 1px solid $primary-color;
-    border-radius: 3px;
-    margin-right: $component-padding;
-    color: $headline-color;
-    font-size: 11px;
-    text-align: center;
-}
-
-.fatex__sheet_setup__option__checkbox {
+.fatex-option-checkbox {
     position: absolute;
     opacity: 0;
     left: -10000px;
     top: -10000px;
 
-    &:checked + .fatex__sheet_setup__option__box {
+    &__box {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        border: 1px solid $primary-color;
+        border-radius: 3px;
+        margin-right: $component-padding;
+        color: $headline-color;
+        font-size: 11px;
+        text-align: center;
+    }
+
+    &:checked + &__box {
         background: $headline-background;
 
         &:before {
@@ -93,9 +95,4 @@
             -webkit-font-smoothing: antialiased;
         }
     }
-}
-
-.fatex__sheet_setup__type__actions {
-    padding: $component-padding $component-padding 0;
-    text-align: center;
 }
