--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,5 +1,6 @@
 .fatex-header {
     position: relative;
+    grid-area: header;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,6 +8,9 @@
     padding: 10px 10px 8px 10px;
     font-size: 23px;
     color: $header-font-color;
+    background: $header-background;
+    box-shadow: 0 2px 15px 0 $header-shadow-color;
+    z-index: 5;
 
     &__name {
         display: flex;
